vendor/pin-project/tests/ui/cfg/packed_sneaky.stderr
error: #[pin_project] attribute may not be used on #[repr(packed)] types
 --> tests/ui/cfg/packed_sneaky.rs:8:27
  |
8 | #[hidden_repr_cfg_not_any(packed)] //~ ERROR may not be used on #[repr(packed)] types
  |                           ^^^^^^
